refactor: 캐시 핸들러 도입으로 인한 책임 분리